<resources>
    <string name="app_name">UnSplash Photo</string>
    <string name="search_hint">Search collections, photos</string>
    <string name="collection">UnSplash Collections</string>
    <string name="download_success">Download Success</string>
    <string name="download_fail">Download Fail</string>
    <string name="title_user">My Contents</string>
    <string name="title_discover">Discover</string>
    <string name="title_collection">Collections</string>
    <string name="discover">Discover Photos</string>
    <string name="user">My Contents</string>
    <string name="delete_complete">Delete complete</string>
    <string name="delete_fail">Delete fail</string>
    <string name="clear_history">Clear</string>
    <string name="recent_history">Recent Search</string>
    <string name="empty_history">No recent search</string>
    <string name="empty_collection_search">No collection found</string>
    <string name="empty_photo_search">No photo found</string>
    <string name="photo_filter">Filter</string>
    <string name="photo_crop">Crop</string>
    <string name="photo_draw">Draw</string>
    <string name="photo_effects">Effects</string>
    <string name="photo_add_icon">Add Icon</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="save_edit">Save</string>
    <string name="downloaded_photo">Downloaded photos</string>
    <string name="like_photo">Like photos</string>
    <string name="photo_downloaded">Photo already download</string>
    <string name="result_title">Result for : \u0020</string>
    <string name="coming_soon">Coming soon</string>
    <string name="photos">\u0020 photos</string>
    <string name="reach_end">No more items</string>
    <string name="channel_name">Download notification</string>
    <string name="channel_description">Download notification</string>
</resources>
